# OpenRobot_UI

./: .gitignore  CMakeLists.txt  README.md  package.xml
includes/ads/: ads_motor_io.hpp
includes/control/: ControllerIO.hpp  ControllerLoop.hpp  Locomotion.h  MjuJoint.hpp  MjuJoy.hpp  MjuRobot.hpp  MjuRobotState.hpp  RssController.hpp  header.hpp
includes/ros/: MjuStatePublisher.hpp
includes/ui_ads_ver/: ads_state_ui.hpp
model/meshes/: EE_Link.STL  base_link.STL
model/mujoco/: openrobot_monitor.xml
model/urdf/: CRM_SUB.urdf
models/: CRM_SUB.xml  scene.xml
models/assets/: LEG1_Link.STL  LEG2_Link.STL  LEG3_Link.STL  LEG4_Link.STL
src/: ads_state_ui.cpp  main.cpp
src/ads/: ads_motor_io.cpp
src/control/: ControlState.cpp  ControllerIO.cpp  ControllerLoop.cpp  MjuJoint.cpp  MjuJoy.cpp  MjuRobot.cpp  RssController.cpp
src/ros/: MjuStatePublisher.cpp
test/: ethercat_experiment_summary_20260325.html  ethercat_experiment_summary_20260325.md
